# AdventOfCode

./: .gitignore  README.md
2023/: CMakeLists.txt  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  days.h  main.cpp
2023/input/: day15.txt  day16.txt  day17.txt
2024/: main.go
2024/days/: day01.go  day02.go  day03.go  day04.go  day05.go  day06.go  day07.go  day08.go  day09.go  day10.go  day11.go  day12.go  day13.go  day14.go  day15.go  day16.go  day17.go  day18.go  day19.go  day20.go  day21.go  day22.go  day23.go  day24.go
tools/: get_input.py
